# SmartOnlyCropperPro_v2

./: .gitignore  README.md  build.gradle  local.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/me/pqpo/smartcropper/: App.java  CropActivity.java  MainActivity.java
app/src/main/res/layout/: activity_crop.xml  activity_main.xml
app/src/main/res/values/: colors.xml
gradle/wrapper/: gradle-wrapper.properties
mnnlib/: CMakeLists.txt  build.gradle
mnnlib/src/androidTest/java/com/dt/mnnlib/: ExampleInstrumentedTest.java
mnnlib/src/main/: AndroidManifest.xml
mnnlib/src/main/cpp/: model.cpp  router.cpp
mnnlib/src/main/cpp/include/: model.h
mnnlib/src/main/java/com/dt/mnnlib/: Model.java
mnnlib/src/test/java/com/dt/mnnlib/: ExampleUnitTest.java
smartcropperlibproV4.4/: CMakeLists.txt  build.gradle  proguard-rules.pro
smartcropperlibproV4.4/src/main/: AndroidManifest.xml
smartcropperlibproV4.4/src/main/cpp/: Scanner.cpp  android_utils.cpp  opencv_utils.cpp  smart_cropper.cpp
smartcropperlibproV4.4/src/main/cpp/include/: Scanner.h  android_utils.h  opencv_utils.h
smartcropperlibproV4.4/src/main/java/com/auto/crop/: ImageDetector.java  SmartCropper.java
smartcropperlibproV4.4/src/main/java/com/auto/crop/utils/: CropUtils.java  FileUtils.java
smartcropperlibproV4.4/src/main/java/com/auto/crop/view/: CropImageView.java
